<resources>
    <string name="app_name">LocalNotificationDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_schedule">Schedule</string>
    <string name="msg_repeat_notification">Repeat notification</string>
    <string name="hint_notification_title">Notification Title</string>
    <string name="hint_notification_text">Notification Text</string>
    <string name="delay">Delay</string>
    <string name="msg_error_title_notification">Please enter a valid notification Title</string>
    <string name="msg_error_id_notification">Please enter a valid notification id</string>
    <string name="msg_error_txt_notification">Please enter some text to show in notification</string>
    <string name="msg_error_txt_id">Please enter notification id to cancel</string>
    <string name="msg_notification_schedule">Notification scheduled</string>
    <string name="msg_notification_schedule_error">Error while scheduling notification</string>
    <string name="msg_notification_cancelled">Notification unscheduled</string>
    <string name="confirm_cancel_notification_title">Unscheduled notification </string>
    <string name="msg_all_notification_cancelled">All notifications unscheduled</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_notification_id">Id</string>
    <string name="confirm_delete_all_desc">Are you sure?</string>
    <string name="confirm_delete_all_title">Unschedule all notifications</string>
    <string name="confirm_override_notification_title">Notification already scheduled</string>
    <string name="confirm_override_notification_desc">Do you want to override the notification on same Id?</string>
    <string name="action_change">Change</string>
    <string name="txt_empty_notification_list">No notification scheduled. User + to schedule a notification now</string>
    <string name="msg_notification_not_scheduled_id">No notification scheduled on this id</string>
    <string name="repeat">Repeat</string>
    <string name="quick_notification">Quick Notification</string>
    <string name="schedule">Schedule</string>
    <string name="notification_with_delay">Notification with delay</string>
    <string name="repeating_notification_with_delay">Repeating notification with delay</string>
    <string name="schedule_on_time">Schedule notification on time</string>
    <string name="hint_trigger_time">Trigger Time</string>
    <string name="schedule_repeating_notification_on_time">Schedule repeating notification on time</string>
    <string name="hint_repeat_after">Repeat After</string>
</resources>
