<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="#ffffff"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".fragments.scheduling.QuickNotificationFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/repeating_notification_with_delay"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/section_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notification_text"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2"
            android:padding="4dp" />

        <android.helper.DateTimePickerEditText
            android:id="@+id/edt_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trigger_time" />

        <android.helper.DateTimePickerEditText
            android:id="@+id/edt_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repeat_after" />

        <Button
            android:id="@+id/btn_schedule"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/schedule" />

    </LinearLayout>

</LinearLayout>