<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGFragment"
    tools:context=".fragments.CreateNotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="#ffffff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:hint="@string/hint_notification_id"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/hint_notification_title" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_notification_text"
            android:maxLines="2"
            android:minLines="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/delay"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_time_picker"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="0" />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggle_repeat"
            style="@style/Base.Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/msg_repeat_notification" />

        <Button
            android:id="@+id/btn_schedule"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/action_schedule" />

    </LinearLayout>


</FrameLayout>